Mon Dec 11 13:25:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: Fix nextApexLoop().

Tue Dec  5 17:53:09 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/OTriangle.java: Modify hasAttributes()
	methods so that hasAttributes(FOO|BAR) is equivalent to
	hasAttributes(FOO) || hasAttributes(BAR), this is more natural than
	current behaviour: hasAttributes(FOO) && hasAttributes(BAR).

Fri Dec  1 13:05:28 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: New outerVertex member,
	which will replace Vertex.outer.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: nextOriginLoop() and
	nextApexLoop() can check OUTER attributes
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Remove useless members:
	type, scaleX, scaleY.

Thu Nov 30 17:03:16 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Nex isEmpty()
	method. Replace first(), last(), next() and prev() by iterator()
	and backwardIterator();

Tue Nov 28 13:27:28 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Triangle.java: In Triangle(Vertex [] v)
	constructor, do not call Vertex.setLink(), let the caller handle
	Vertex links.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: New split() method.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java:
	New class, to provide a skeleton for HalfEdge based algorithms.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/SplitEdge.java: Rewritten to
	extend AbstractAlgoHalfEdge.
	* src/org/jcae/mesh/amibe/util/PAVLSortedTree2.java
	  src/org/jcae/mesh/amibe/util/PAVLNode.java
	  src/org/jcae/mesh/amibe/util/PAVLNodeOTriangle.java: These classes
	are removed.  When algorithms use edge-based quality criterion, it is
	much more efficient to call Mesh.buildEdges() and use