@@ -1,3 +1,8 @@
+Tue Dec 12 13:15:57 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Update balance
+	factors in rotateL() and rotateR() to improve readability.
+
 Mon Dec 11 13:25:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: Fix nextApexLoop().
